fix(e-sanar): fix scrollable on Mobile

--- a/packages/e-sanar/src/Pages/Portal/Layout/style.less
+++ b/packages/e-sanar/src/Pages/Portal/Layout/style.less
@@ -20,9 +20,7 @@
     }
 
     &__content {
-        min-height: ~'calc(100% - 181px)';
-        display: flex;
-        flex-direction: column;
+        max-width: 100vw;
     }
 
     &__footer {
